# TSMultimeter

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/instructions/: copilot_instructions.md.instructions.md
.github/prompts/: refactor.prompt.md
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/src/: communication.rs  error.rs  lib.rs  main.rs
backend/src/device/: fluke.rs  mock.rs  mod.rs
frontend/: .eslintrc.cjs  electron-main.ts  index.html  package-lock.json  package.json  preload.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
frontend/public/: popout.html
frontend/scripts/: build-backend.js
frontend/src/: App.tsx  main.tsx  popout.tsx
frontend/src/api/: deviceClient.ts
frontend/src/components/: DeviceConnection.tsx  MeasurementDisplay.tsx  MeasurementHistory.ts  MeasurementHistory.tsx
frontend/src/components/AppLayout/: styled.ts
frontend/src/components/ChannelSettings/: ChannelSettingsCommonFields.tsx  styled.ts
frontend/src/components/MathChannel/: styled.ts  (+3 more)
frontend/src/hooks/: useChannelManager.ts  useChannelSettingsManager.ts  useDeveloperMode.ts  useDevice.ts  useDeviceChannelWizard.ts  useMathChannelHistory.ts  useMeasurementSummaries.ts
frontend/src/state/: channelSettingsReducer.ts
frontend/src/types/: channel.ts  deviceData.ts  devices.ts  electron.d.ts  measurement.ts  popout.ts
frontend/src/utils/: channelColors.ts  createId.ts  formatNumber.ts  mathChannelDefaults.ts  mathChannelLegend.ts  mathExpressions.ts
protocols/: README.md
protocols/fluke/: fluke-289-287-specification.md
(+44 files in other folders)
