[package]
name = "tsmultimeter-backend"
version = "0.1.0"
edition = "2021"
description = "Backend for TSMultimeter - Rust communication layer for multimeter devices"
authors = ["TSMultimeter Team"]
license = "MIT"
repository = "https://github.com/TeodorSameisky/TSMultimeter"
keywords = ["multimeter", "serial", "measurement", "instrumentation"]
categories = ["hardware-support", "science"]

[dependencies]
# Serial communication
serialport = "4.2"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# IPC communication with frontend
tauri = { version = "1.5", features = ["shell-open"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Random number generation for mock device
rand = "0.8"
# Async traits
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"

[build-dependencies]
tauri-build = "1.5"
# Testing
tokio-test = "0.4"
